-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.17.0
-
3
-
9223372036854775807
Running "lfs mirror extend -N 1 FILE" (or "mirror create -N 1") tries to add a mirror to (or create) the file "1" instead of setting the mirror count to 1:
# lfs mirror extend -N 1 /myth/tmp/adilger/pflfile error: lfs extend: 1: cannot get layout: Invalid argument # lfs mirror create -N 2 /myth/tmp/adilger/mirror_file2 lfs mirror mirror: lfs create: cannot create composite file '2': Permission denied (13)
While the correct syntax is "-N1", and this behavior is strictly correct, it is counter-intuitive for users.
It would be better to handle this as users expect, by checking if a the mirror count has not been specified, but a filename of "1-9" is specified, and use that to set the mirror count.