LU-20013 lfs: handle space-separated mirror count argument

The "-N" option for mirror commands uses optional_argument in getopt,
which causes issues when the mirror count is space-separated from the
option (e.g., "-N 1" instead of "-N1").

Add logic to detect numeric arguments following "-N" when no direct
argument is provided, allowing these formats to all work correctly:
- "-N1" (attached)
- "-N 1" (space-separated)

Also utilized space-separated behavior in sanity-flr.sh test_6a()
and test_39() to verify the fix.

Test-Parameter: trivial

Change-Id: I19a603dd3c00fbb92323545b40a6d409499f757f
Signed-off-by: Chakshu Kansal <ckansal@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65145
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>